--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 <ng-container class="flex padding-10 font-color">
-  <h1 class="flex center font-color">One Click Demo</h1>
+  <h1 class="flex center font-color">Camera Connector Demo</h1>
   @for (workItem of workItems; track workItem.idx) {
     <mat-card appearance="raised">
       <mat-card-title class="margin-left-1em">Powermeter {{workItem.idx}}</mat-card-title>
