--- a/src/app/connector/connector.component.html
+++ b/src/app/connector/connector.component.html
@@ -33,10 +33,8 @@
     </mat-card>
   }
   <mat-card class="flex center" appearance="raised">
-    <mat-card-actions>
-      <button mat-button (click)="onAddItemClicked()">
-        <mat-icon class="size-xxl" fontIcon="add"/>
-      </button>
-    </mat-card-actions>
+    <button mat-button (click)="onAddItemClicked()" class="button">
+      <mat-icon class="size-xxl" fontIcon="add"/>
+    </button>
   </mat-card>
 </ng-container>
